--- a/digit_recognizer/03.ipynb
+++ b/digit_recognizer/03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,27 +254,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sd_scaler = StandardScaler()\n",
-    "# X_train_small = sd_scaler.fit_transform(X_train_small)\n",
-    "# X_test_small = sd_scaler.transform(X_test_small)"
+    "sd_scaler = MinMaxScaler()\n",
+    "X_train_small = sd_scaler.fit_transform(X_train_small)\n",
+    "X_test_small = sd_scaler.transform(X_test_small)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,16 +300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test_df_values = sd_scaler.transform(test_df_values)"
+    "test_df_values = sd_scaler.transform(test_df_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,6 +369,7 @@
     "        training_data = list(training_data)\n",
     "        n = len(training_data)\n",
     "        for j in range(epochs):\n",
+    "            eta = eta * 0.8\n",
     "            random.shuffle(training_data)\n",
     "            mini_batches = [\n",
     "                training_data[k: k + mini_batch_size] for k in range(0, n, mini_batch_size)\n",
@@ -459,18 +460,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 176,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0: 3776 / 4200, Accuracy score: 0.8990476190476191\n",
+      "Epoch 1: 3893 / 4200, Accuracy score: 0.9269047619047619\n",
+      "Epoch 2: 3917 / 4200, Accuracy score: 0.9326190476190476\n",
+      "Epoch 3: 3935 / 4200, Accuracy score: 0.9369047619047619\n",
+      "Epoch 4: 3949 / 4200, Accuracy score: 0.9402380952380952\n",
+      "Epoch 5: 3951 / 4200, Accuracy score: 0.9407142857142857\n",
+      "Epoch 6: 3945 / 4200, Accuracy score: 0.9392857142857143\n",
+      "Epoch 7: 3954 / 4200, Accuracy score: 0.9414285714285714\n",
+      "Epoch 8: 3944 / 4200, Accuracy score: 0.939047619047619\n",
+      "Epoch 9: 3960 / 4200, Accuracy score: 0.9428571428571428\n",
+      "Epoch 10: 3960 / 4200, Accuracy score: 0.9428571428571428\n",
+      "Epoch 11: 3962 / 4200, Accuracy score: 0.9433333333333334\n",
+      "Epoch 12: 3956 / 4200, Accuracy score: 0.9419047619047619\n",
+      "Epoch 13: 3962 / 4200, Accuracy score: 0.9433333333333334\n",
+      "Epoch 14: 3962 / 4200, Accuracy score: 0.9433333333333334\n",
+      "Epoch 15: 3962 / 4200, Accuracy score: 0.9433333333333334\n",
+      "Epoch 16: 3964 / 4200, Accuracy score: 0.9438095238095238\n",
+      "Epoch 17: 3962 / 4200, Accuracy score: 0.9433333333333334\n",
+      "Epoch 18: 3963 / 4200, Accuracy score: 0.9435714285714286\n",
+      "Epoch 19: 3962 / 4200, Accuracy score: 0.9433333333333334\n",
+      "Epoch 20: 3964 / 4200, Accuracy score: 0.9438095238095238\n",
+      "Epoch 21: 3962 / 4200, Accuracy score: 0.9433333333333334\n",
+      "Epoch 22: 3964 / 4200, Accuracy score: 0.9438095238095238\n",
+      "Epoch 23: 3963 / 4200, Accuracy score: 0.9435714285714286\n",
+      "Epoch 24: 3961 / 4200, Accuracy score: 0.9430952380952381\n",
+      "Epoch 25: 3961 / 4200, Accuracy score: 0.9430952380952381\n",
+      "Epoch 26: 3961 / 4200, Accuracy score: 0.9430952380952381\n",
+      "Epoch 27: 3961 / 4200, Accuracy score: 0.9430952380952381\n",
+      "Epoch 28: 3961 / 4200, Accuracy score: 0.9430952380952381\n",
+      "Epoch 29: 3961 / 4200, Accuracy score: 0.9430952380952381\n"
+     ]
+    }
+   ],
    "source": [
     "sizes = [784, 30, 10]\n",
     "networ = Network(sizes)\n",
-    "# networ.SGD(training_data, 30, 20, 3, test_data)"
+    "networ.SGD(training_data, 30, 10, 5, test_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,16 +549,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ImageId = np.arange(1, 28001)\n",
-    "# result = pd.DataFrame({\n",
-    "#     \"ImageId\": ImageId,\n",
-    "#     \"Label\": y\n",
-    "# })\n",
-    "# result.to_csv(\"result_03.csv\", index=False)\n",
+    "ImageId = np.arange(1, 28001)\n",
+    "result = pd.DataFrame({\n",
+    "    \"ImageId\": ImageId,\n",
+    "    \"Label\": y\n",
+    "})\n",
+    "result.to_csv(\"result_03.csv\", index=False)\n",
     "# dnn_clf.predict(test_tf_full_pipeline)"
    ]
   },
