--- a/digit_recognizer/05.ipynb
+++ b/digit_recognizer/05.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "def sigmoid(x):\n",
     "    return 1.0 / (1.0 + np.exp(-x))\n",
+    "#     return x * (x > 0)\n",
     "def sigmoid_derivative(output):\n",
-    "    return output * (1 - output)"
+    "    return output * (1 - output)\n",
+    "#     return 1.0 * (output > 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,20 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 网络结构\n",
     "n_input = 2\n",
-    "hidden1 = 8\n",
+    "hidden1 = 20\n",
     "n_output = 1\n",
     "learning_rate = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,64 +123,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss:2.0620856028537196\n",
-      "Pred:[1 0 0 0 0 0 0 0 0]\n",
+      "loss:3.117229167874814\n",
+      "Pred:[0 1 1 0 1 1 1 0 0]\n",
       "Ture:[1 0 1 0 0 0 0 0 1]\n",
-      "144 + 177 = 256\n",
+      "144 + 177 = 220\n",
       "------------\n",
-      "loss:1.064517875015187\n",
-      "Pred:[0 1 0 0 0 1 1 1 0]\n",
-      "Ture:[0 1 0 1 0 1 1 1 0]\n",
-      "122 + 52 = 142\n",
+      "loss:0.05075774004289278\n",
+      "Pred:[1 0 0 0 1 1 0 0 0]\n",
+      "Ture:[1 0 0 0 1 1 0 0 0]\n",
+      "61 + 219 = 280\n",
       "------------\n",
-      "loss:0.08429445679044006\n",
-      "Pred:[0 1 0 0 1 1 1 1 1]\n",
-      "Ture:[0 1 0 0 1 1 1 1 1]\n",
-      "13 + 146 = 159\n",
+      "loss:0.008901296342499239\n",
+      "Pred:[1 0 1 0 0 0 1 1 0]\n",
+      "Ture:[1 0 1 0 0 0 1 1 0]\n",
+      "179 + 147 = 326\n",
       "------------\n",
-      "loss:0.0018369681624449711\n",
-      "Pred:[0 0 1 1 1 0 1 1 0]\n",
-      "Ture:[0 0 1 1 1 0 1 1 0]\n",
-      "16 + 102 = 118\n",
+      "loss:0.003560181308983859\n",
+      "Pred:[1 1 0 0 0 0 0 1 0]\n",
+      "Ture:[1 1 0 0 0 0 0 1 0]\n",
+      "208 + 178 = 386\n",
       "------------\n",
-      "loss:0.010591858330634519\n",
-      "Pred:[0 1 1 1 1 0 1 1 0]\n",
-      "Ture:[0 1 1 1 1 0 1 1 0]\n",
-      "217 + 29 = 246\n",
+      "loss:0.004068686605974181\n",
+      "Pred:[1 0 0 1 1 1 1 0 1]\n",
+      "Ture:[1 0 0 1 1 1 1 0 1]\n",
+      "127 + 190 = 317\n",
       "------------\n",
-      "loss:0.004296186342817197\n",
-      "Pred:[1 0 0 1 1 0 0 0 0]\n",
-      "Ture:[1 0 0 1 1 0 0 0 0]\n",
-      "136 + 168 = 304\n",
+      "loss:0.0014722519685070727\n",
+      "Pred:[0 1 1 1 1 0 0 0 0]\n",
+      "Ture:[0 1 1 1 1 0 0 0 0]\n",
+      "24 + 216 = 240\n",
       "------------\n",
-      "loss:0.004865832231968171\n",
-      "Pred:[1 0 1 1 0 0 1 1 1]\n",
-      "Ture:[1 0 1 1 0 0 1 1 1]\n",
-      "235 + 124 = 359\n",
+      "loss:0.0017383137184438621\n",
+      "Pred:[1 0 0 0 1 0 1 0 1]\n",
+      "Ture:[1 0 0 0 1 0 1 0 1]\n",
+      "38 + 239 = 277\n",
       "------------\n",
-      "loss:0.005039633274664597\n",
-      "Pred:[0 1 1 0 1 0 1 1 0]\n",
-      "Ture:[0 1 1 0 1 0 1 1 0]\n",
-      "43 + 171 = 214\n",
+      "loss:0.0016937508648072095\n",
+      "Pred:[1 1 0 0 0 0 1 0 1]\n",
+      "Ture:[1 1 0 0 0 0 1 0 1]\n",
+      "178 + 211 = 389\n",
       "------------\n",
-      "loss:0.002620415590784438\n",
-      "Pred:[0 1 1 0 1 1 1 0 1]\n",
-      "Ture:[0 1 1 0 1 1 1 0 1]\n",
-      "163 + 58 = 221\n",
+      "loss:0.001547214246852141\n",
+      "Pred:[1 0 0 1 1 0 1 1 1]\n",
+      "Ture:[1 0 0 1 1 0 1 1 1]\n",
+      "255 + 56 = 311\n",
       "------------\n",
-      "loss:0.0017325545900670676\n",
-      "Pred:[0 1 0 1 0 1 1 1 1]\n",
-      "Ture:[0 1 0 1 0 1 1 1 1]\n",
-      "54 + 121 = 175\n",
+      "loss:0.0012318514149418415\n",
+      "Pred:[1 0 0 1 1 0 1 0 1]\n",
+      "Ture:[1 0 0 1 1 0 1 0 1]\n",
+      "151 + 158 = 309\n",
       "------------\n",
-      "loss:0.0012565331581781615\n",
+      "loss:0.0006368595524957951\n",
       "Pred:[1 0 1 0 0 0 0 0 1]\n",
       "Ture:[1 0 1 0 0 0 0 0 1]\n",
       "144 + 177 = 321\n",
@@ -220,6 +222,7 @@
     "    # forward\n",
     "    for t in range(binary_dim):\n",
     "        xt = X[binary_dim - t - 1]  # 反着来\n",
+    "        \n",
     "        ht = sigmoid(np.dot(xt, U) + np.dot(hs[-1], V)) # +prev_hidden\n",
     "        ot = sigmoid(np.dot(ht, W))\n",
     "        hs.append(ht)\n",
