--- a/experimental/01.ipynb
+++ b/experimental/01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,20 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-0.00512996]\n",
-      " [ 0.01067506]\n",
-      " [ 0.01224925]\n",
-      " [-0.01402993]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for j in range(1):\n",
     "    l1 = sigmoid(np.dot(X, syn0))\n",
@@ -58,6 +47,107 @@
     "    syn1 += l1.T.dot(l2_delta)\n",
     "    syn0 += X.T.dot(l1_delta)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = np.ones([10, 10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.random.binomial([array], 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.52562506 0.67949173 0.43497207 0.45491656]\n",
+      " [0.71988324 0.6364634  0.54772664 0.24208895]\n",
+      " [0.39467491 0.49178841 0.35930219 0.56496563]\n",
+      " [0.60194817 0.44417389 0.46871313 0.33201267]]\n",
+      "[[1 1 1 1]\n",
+      " [1 0 1 1]\n",
+      " [1 0 1 0]\n",
+      " [1 1 1 0]]\n",
+      "0.75\n",
+      "[[0.52562506 0.67949173 0.43497207 0.45491656]\n",
+      " [0.71988324 0.         0.54772664 0.24208895]\n",
+      " [0.39467491 0.         0.35930219 0.        ]\n",
+      " [0.60194817 0.44417389 0.46871313 0.        ]]\n",
+      "0.21988738082253068\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "X = np.array([ [0,0,1],[0,1,1],[1,0,1],[1,1,1] ])\n",
+    "y = np.array([[0,1,1,0]]).T\n",
+    "alpha,hidden_dim,dropout_percent,do_dropout = (0.5,4,0.2,True)\n",
+    "synapse_0 = 2*np.random.random((3,hidden_dim)) - 1\n",
+    "synapse_1 = 2*np.random.random((hidden_dim,1)) - 1\n",
+    "for j in range(1):\n",
+    "    layer_1 = (1/(1+np.exp(-(np.dot(X,synapse_0)))))\n",
+    "    print(layer_1)\n",
+    "    if(do_dropout):\n",
+    "        drop_out = np.random.binomial([np.ones((len(X),hidden_dim))],1-dropout_percent)[0]\n",
+    "        print(drop_out)\n",
+    "        print(drop_out.mean())\n",
+    "        layer_1 *= drop_out\n",
+    "        print(layer_1)\n",
+    "    layer_2 = 1/(1+np.exp(-(np.dot(layer_1,synapse_1))))\n",
+    "    layer_2_delta = (layer_2 - y)*(layer_2*(1-layer_2))\n",
+    "    if j % 5000 == 0:\n",
+    "        print(np.mean((layer_2 - y) ** 2))\n",
+    "    layer_1_delta = layer_2_delta.dot(synapse_1.T) * (layer_1 * (1-layer_1))\n",
+    "    synapse_1 -= (alpha * layer_1.T.dot(layer_2_delta))\n",
+    "    synapse_0 -= (alpha * X.T.dot(layer_1_delta))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
