--- a/bag_of_words_meets_bags_of_popcorn/02.ipynb
+++ b/bag_of_words_meets_bags_of_popcorn/02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -87,44 +87,33 @@
       "  markup_type=markup_type))\n",
       "/anaconda3/lib/python3.6/site-packages/bs4/__init__.py:219: UserWarning: \"b'.'\" looks like a filename, not markup. You should probably open this file and pass the filehandle into Beautiful Soup.\n",
       "  ' Beautiful Soup.' % markup)\n",
-      "/anaconda3/lib/python3.6/site-packages/bs4/__init__.py:282: UserWarning: \"http://www.happierabroad.com\"\" looks like a URL. Beautiful Soup is not an HTTP client. You should probably use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
-      "  ' that document to Beautiful Soup.' % decoded_markup\n",
       "/anaconda3/lib/python3.6/site-packages/bs4/__init__.py:282: UserWarning: \"http://www.archive.org/details/LovefromaStranger\"\" looks like a URL. Beautiful Soup is not an HTTP client. You should probably use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
-      "  ' that document to Beautiful Soup.' % decoded_markup\n",
-      "/anaconda3/lib/python3.6/site-packages/bs4/__init__.py:282: UserWarning: \"http://www.loosechangeguide.com/LooseChangeGuide.html\"\" looks like a URL. Beautiful Soup is not an HTTP client. You should probably use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
-      "  ' that document to Beautiful Soup.' % decoded_markup\n",
-      "/anaconda3/lib/python3.6/site-packages/bs4/__init__.py:282: UserWarning: \"http://www.msnbc.msn.com/id/4972055/site/newsweek/\"\" looks like a URL. Beautiful Soup is not an HTTP client. You should probably use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
-      "  ' that document to Beautiful Soup.' % decoded_markup\n",
-      "/anaconda3/lib/python3.6/site-packages/bs4/__init__.py:219: UserWarning: \"b'..'\" looks like a filename, not markup. You should probably open this file and pass the filehandle into Beautiful Soup.\n",
-      "  ' Beautiful Soup.' % markup)\n",
-      "/anaconda3/lib/python3.6/site-packages/bs4/__init__.py:282: UserWarning: \"http://www.youtube.com/watch?v=a0KSqelmgN8\"\" looks like a URL. Beautiful Soup is not an HTTP client. You should probably use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
-      "  ' that document to Beautiful Soup.' % decoded_markup\n",
-      "/anaconda3/lib/python3.6/site-packages/bs4/__init__.py:282: UserWarning: \"http://jake-weird.blogspot.com/2007/08/beneath.html\"\" looks like a URL. Beautiful Soup is not an HTTP client. You should probably use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
       "  ' that document to Beautiful Soup.' % decoded_markup\n"
      ]
     }
    ],
    "source": [
     "sentences = []\n",
+    "number = 1000\n",
     "print(\"Parsing sentences from training set\")\n",
-    "for review in train[\"review\"]:\n",
+    "for review in train[\"review\"][:number]:\n",
     "    sentences += review_to_sentences(review, tokenizer)\n",
-    "for review in unlabeled_train[\"review\"]:\n",
+    "for review in unlabeled_train[\"review\"][:number]:\n",
     "    sentences += review_to_sentences(review, tokenizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "795538"
+       "20812"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -202,10 +198,10 @@
     {
      "data": {
       "text/plain": [
-       "'kitchen'"
+       "'child'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -230,10 +226,10 @@
     {
      "data": {
       "text/plain": [
-       "'austria'"
+       "'london'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -258,19 +254,19 @@
     {
      "data": {
       "text/plain": [
-       "[('woman', 0.6276388764381409),\n",
-       " ('lad', 0.6071393489837646),\n",
-       " ('lady', 0.58219313621521),\n",
-       " ('men', 0.5235027074813843),\n",
-       " ('guy', 0.5211378931999207),\n",
-       " ('person', 0.5167438983917236),\n",
-       " ('monk', 0.5147053599357605),\n",
-       " ('soldier', 0.510221004486084),\n",
-       " ('farmer', 0.5099583864212036),\n",
-       " ('businessman', 0.5084689855575562)]"
+       "[('woman', 0.9758438467979431),\n",
+       " ('father', 0.951120138168335),\n",
+       " ('daughter', 0.949702799320221),\n",
+       " ('girl', 0.9490815997123718),\n",
+       " ('mother', 0.9442487359046936),\n",
+       " ('wife', 0.9383818507194519),\n",
+       " ('young', 0.9375650882720947),\n",
+       " ('son', 0.9369031190872192),\n",
+       " ('finds', 0.9272494912147522),\n",
+       " ('boy', 0.9223595261573792)]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -295,30 +291,30 @@
     {
      "data": {
       "text/plain": [
-       "[('princess', 0.6749973893165588),\n",
-       " ('bride', 0.6070979833602905),\n",
-       " ('stepmother', 0.5906005501747131),\n",
-       " ('goddess', 0.5840883255004883),\n",
-       " ('belle', 0.572691023349762),\n",
-       " ('latifah', 0.5719773173332214),\n",
-       " ('dame', 0.5698574185371399),\n",
-       " ('victoria', 0.563430905342102),\n",
-       " ('kristel', 0.5623289942741394),\n",
-       " ('hunchback', 0.5578924417495728)]"
+       "[('son', 0.975487470626831),\n",
+       " ('starts', 0.9747697114944458),\n",
+       " ('named', 0.9739161729812622),\n",
+       " ('finds', 0.9711717367172241),\n",
+       " ('daughter', 0.9708755016326904),\n",
+       " ('falls', 0.9697022438049316),\n",
+       " ('mother', 0.9693663120269775),\n",
+       " ('brother', 0.9688738584518433),\n",
+       " ('girl', 0.966877281665802),\n",
+       " ('young', 0.9649040102958679)]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.most_similar(\"queen\")"
+    "model.most_similar(\"boy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -332,19 +328,19 @@
     {
      "data": {
       "text/plain": [
-       "[('terrible', 0.7633955478668213),\n",
-       " ('horrible', 0.734089732170105),\n",
-       " ('atrocious', 0.7212321758270264),\n",
-       " ('abysmal', 0.7150809168815613),\n",
-       " ('dreadful', 0.706222414970398),\n",
-       " ('horrendous', 0.6922901272773743),\n",
-       " ('appalling', 0.666459858417511),\n",
-       " ('horrid', 0.6415724158287048),\n",
-       " ('lousy', 0.6407931447029114),\n",
-       " ('laughable', 0.6062197089195251)]"
+       "[('terrible', 0.9705706238746643),\n",
+       " ('boring', 0.9602379202842712),\n",
+       " ('truly', 0.9583942294120789),\n",
+       " ('quality', 0.9551643133163452),\n",
+       " ('writing', 0.9492000937461853),\n",
+       " ('entertaining', 0.9477874040603638),\n",
+       " ('ending', 0.9319590330123901),\n",
+       " ('original', 0.9301999807357788),\n",
+       " ('lame', 0.9283192753791809),\n",
+       " ('overall', 0.927104115486145)]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
