--- a/bag_of_words_meets_bags_of_popcorn/03.ipynb
+++ b/bag_of_words_meets_bags_of_popcorn/03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -39,28 +39,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.03144343, -0.02232238, -0.02028987, ..., -0.02405546,\n",
-       "         0.09926601,  0.049621  ],\n",
-       "       [-0.05746495, -0.05549316, -0.11874807, ..., -0.03157035,\n",
-       "         0.05097324,  0.01731471],\n",
-       "       [ 0.00215511, -0.00649544,  0.01320117, ..., -0.0620345 ,\n",
-       "         0.02614006,  0.04123367],\n",
-       "       ...,\n",
-       "       [-0.06553942, -0.01146925,  0.15460777, ...,  0.09524195,\n",
-       "        -0.07421808, -0.00829083],\n",
-       "       [-0.01500735, -0.00073907,  0.00629002, ...,  0.02063346,\n",
-       "        -0.01849476, -0.04222548],\n",
-       "       [-0.06901131, -0.05137084,  0.11262897, ..., -0.06355549,\n",
-       "        -0.07343313, -0.02937378]], dtype=float32)"
+       "(1150, 300)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.wv.syn0"
+    "model.wv.syn0.shape"
    ]
   },
   {
@@ -72,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Review 0 of 25000\n"
+      "Review 0 of 1000\n"
      ]
     },
     {
@@ -178,67 +166,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Review 1000 of 25000\n",
-      "Review 2000 of 25000\n",
-      "Review 3000 of 25000\n",
-      "Review 4000 of 25000\n",
-      "Review 5000 of 25000\n",
-      "Review 6000 of 25000\n",
-      "Review 7000 of 25000\n",
-      "Review 8000 of 25000\n",
-      "Review 9000 of 25000\n",
-      "Review 10000 of 25000\n",
-      "Review 11000 of 25000\n",
-      "Review 12000 of 25000\n",
-      "Review 13000 of 25000\n",
-      "Review 14000 of 25000\n",
-      "Review 15000 of 25000\n",
-      "Review 16000 of 25000\n",
-      "Review 17000 of 25000\n",
-      "Review 18000 of 25000\n",
-      "Review 19000 of 25000\n",
-      "Review 20000 of 25000\n",
-      "Review 21000 of 25000\n",
-      "Review 22000 of 25000\n",
-      "Review 23000 of 25000\n",
-      "Review 24000 of 25000\n",
       "Creating average feature vecs for text reviews\n",
-      "Review 0 of 25000\n",
-      "Review 1000 of 25000\n",
-      "Review 2000 of 25000\n",
-      "Review 3000 of 25000\n",
-      "Review 4000 of 25000\n",
-      "Review 5000 of 25000\n",
-      "Review 6000 of 25000\n",
-      "Review 7000 of 25000\n",
-      "Review 8000 of 25000\n",
-      "Review 9000 of 25000\n",
-      "Review 10000 of 25000\n",
-      "Review 11000 of 25000\n",
-      "Review 12000 of 25000\n",
-      "Review 13000 of 25000\n",
-      "Review 14000 of 25000\n",
-      "Review 15000 of 25000\n",
-      "Review 16000 of 25000\n",
-      "Review 17000 of 25000\n",
-      "Review 18000 of 25000\n",
-      "Review 19000 of 25000\n",
-      "Review 20000 of 25000\n",
-      "Review 21000 of 25000\n",
-      "Review 22000 of 25000\n",
-      "Review 23000 of 25000\n",
-      "Review 24000 of 25000\n"
+      "Review 0 of 1000\n"
      ]
     }
    ],
    "source": [
     "clean_train_reviews = []\n",
-    "for review in train[\"review\"]:\n",
+    "number = 1000\n",
+    "for review in train[\"review\"][:number]:\n",
     "    clean_train_reviews.append(review_to_wordlist(review, remove_stopwords=True))\n",
     "trainDataVecs = getAvgFeatureVecs(clean_train_reviews, model, num_features)\n",
     "print(\"Creating average feature vecs for text reviews\")\n",
     "clean_test_reviews = []\n",
-    "for review in test[\"review\"]:\n",
+    "for review in test[\"review\"][:number]:\n",
     "    clean_test_reviews.append(review_to_wordlist(review, remove_stopwords=True))\n",
     "testDataVecs = getAvgFeatureVecs(clean_test_reviews, model, num_features)"
    ]
@@ -266,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,16 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time taken for K Means clustering:  0.00021886825561523438 seconds.\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -293,11 +234,18 @@
       "/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:2: DeprecationWarning: Call to deprecated `syn0` (Attribute will be removed in 4.0.0, use self.wv.vectors instead).\n",
       "  \n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken for K Means clustering:  2.264671802520752 seconds.\n"
+     ]
     }
    ],
    "source": [
     "start = time.time()\n",
-    "word_vertors = model.wv.syn0\n",
+    "word_features = model.wv.syn0\n",
     "num_clusters =int( word_features.shape[0] / 5)\n",
     "kmeans_clustering = KMeans(n_clusters=int(num_clusters))\n",
     "idx = kmeans_clustering.fit_predict(word_features)\n",
@@ -308,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -316,25 +264,25 @@
      "output_type": "stream",
      "text": [
       "Cluster 0\n",
-      "['lamarr', 'hedy', 'olga']\n",
+      "['second']\n",
       "Cluster 1\n",
-      "['service', 'staff', 'safety', 'demand', 'firm', 'insurance', 'services', 'protection', 'reward', 'request', 'employment', 'ransom', 'institute', 'escort', 'volunteer', 'debts', 'payment', 'arrange', 'taxes']\n",
+      "['slow', 'hilarious', 'particularly', 'soundtrack', 'ridiculous', 'cute', 'believable', 'flat', 'exciting', 'odd', 'acted', 'awesome']\n",
       "Cluster 2\n",
-      "['jealous', 'scheming', 'bitchy', 'conniving', 'distraught', 'timid', 'virginal', 'headstrong', 'tomboy', 'plucky']\n",
+      "['new', 'school', 'death', 'small', 'town', 'whose']\n",
       "Cluster 3\n",
-      "['rear', 'statue', 'closeup', 'silhouette', 'parting', 'nary']\n",
+      "['saying', 'avoid', 'review', 'comments', 'reviews', 'sorry', 'comment', 'expecting']\n",
       "Cluster 4\n",
-      "['fabric']\n",
+      "['yet', 'looking', 'stay', 'talk', 'begin', 'question', 'whatever', 'joke']\n",
       "Cluster 5\n",
-      "['landmark', 'quintessential', 'monumental', 'eklavya', 'triumphant', 'nadir', 'marking', 'crowning', 'purest']\n",
+      "['getting', 'lost', 'past', 'soon', 'coming', 'power', 'turned', 'trouble', 'changed']\n",
       "Cluster 6\n",
-      "['alex', 'mills', 'hector', 'edison', 'wolverine', 'cabot', 'hatton', 'duryea', 'sasha', 'merrill', 'sloan', 'bannister', 'mantee', 'mendoza']\n",
+      "['fact', 'truly', 'classic', 'writing']\n",
       "Cluster 7\n",
-      "['tearing', 'stepping', 'pouring', 'poured', 'tripping', 'rubble', 'melted', 'crawls']\n",
+      "['these']\n",
       "Cluster 8\n",
-      "['calling', 'helping', 'teaches', 'insults', 'encourages', 'inviting', 'attracts', 'manipulating', 'interviewing', 'enables', 'prompts', 'informing']\n",
+      "['shot', 'perfect', 'lead', 'michael', 'moves']\n",
       "Cluster 9\n",
-      "['architect', 'idealistic', 'heir', 'inheritance', 'aristocrat', 'researcher']\n"
+      "['show', 'hope', 'able', 'wanted']\n"
      ]
     }
    ],
@@ -357,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,16 +321,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_cetroids = np.zeros((train[\"review\"].size, num_clusters), dtype=\"float32\")"
+    "train_cetroids = np.zeros((train[\"review\"][:number].size, num_clusters), dtype=\"float32\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,11 +342,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_cetroids = np.zeros((test[\"review\"].size, num_clusters), dtype=\"float32\")\n",
+    "test_cetroids = np.zeros((test[\"review\"][:number].size, num_clusters), dtype=\"float32\")\n",
     "counter = 0\n",
     "for review in clean_test_reviews:\n",
     "    test_cetroids[counter] = create_bag_of_centroids(review, word_centroid_map)\n",
@@ -407,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -425,12 +373,12 @@
     "\n",
     "# Fitting the forest may take a few minutes\n",
     "print(\"Fitting a random forest to labeled training data...\")\n",
-    "forest = forest.fit(train_cetroids,train[\"sentiment\"])\n",
-    "result = forest.predict(test_cetroids)\n",
+    "forest = forest.fit(train_cetroids,train[\"sentiment\"][:1000])\n",
+    "# result = forest.predict(test_cetroids)\n",
     "\n",
     "# Write the test results \n",
-    "output = pd.DataFrame(data={\"id\":test[\"id\"], \"sentiment\":result})\n",
-    "output.to_csv( \"result_03_2.csv\", index=False, quoting=3 )"
+    "# output = pd.DataFrame(data={\"id\":test[\"id\"], \"sentiment\":result})\n",
+    "# output.to_csv( \"result_03_2.csv\", index=False, quoting=3 )"
    ]
   },
   {
